# ZNCBZS

./: .env.docker.example  .env.example  .gitattributes  .gitignore  Dockerfile  FEATURES.md  INTERVIEW_01_项目架构.md  INTERVIEW_02_模型微调.md  MODEL_IMPLEMENTATION_STATUS.md  Makefile  README.md  REQUIREMENTS_ANALYSIS.md  REQUIREMENTS_COMPLIANCE.md  docker-compose.yml  production_optimization_report.md  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  gunicorn_conf.py  main.py
backend/api/: __init__.py  deps.py
backend/api/routes/: __init__.py  agents.py  analysis.py  auth.py  chat.py  data_integration.py  report.py  upload.py  voice.py
backend/core/: __init__.py  auth.py  config.py  logging.py  middleware.py  prompt_security.py  rate_limit.py  security.py
backend/data/: __init__.py  cleaner.py  collector.py  database.py  import_service.py  processor.py  storage.py
backend/engine/: __init__.py  coordinator.py  llm_service.py  retrieval.py
backend/mcp/: README.md  __init__.py  client.py  server.py
backend/models/: README.md  __init__.py  operation_log.py  schemas.py  user.py
backend/models/attribution/: __init__.py  xgboost_attribution.py
backend/models/finetune/: __init__.py  lora_trainer.py
backend/models/multimodal/: __init__.py  chart_parser.py
backend/models/ner/: __init__.py  financial_ner.py
backend/models/reranker/: __init__.py  bert_reranker.py
backend/services/: __init__.py  agents.py  alert_service.py  analysis_service.py  data_integration_service.py  report_generator.py  report_service.py  scheduler.py  voice_service.py
config/: env_template.txt  model_config.yaml
docs/: API_VERSIONING.md  COMPLETE_DEVELOPMENT_TIMELINE.md  DATA_INTEGRATION_GUIDE.md  DEVELOPMENT_TIMELINE.md  FEATURES.md  INTERVIEW_01_项目架构.md  INTERVIEW_02_模型微调.md  INTERVIEW_03_多Agent协调.md  INTERVIEW_04_Langchain.md  INTERVIEW_总览.md  MCP_ARCHITECTURE.md  MCP_IMPLEMENTATION_CHECK.md  README.md  REQUIREMENTS_ANALYSIS.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: chat.js
frontend/src/components/: ErrorBoundary.jsx  GlobalLoading.jsx  Layout.jsx
frontend/src/pages/: AgentsPage.css  AgentsPage.jsx  AnalysisPage.css  AnalysisPage.jsx  ChatPage.css  ChatPage.jsx  NotFound.jsx  ReportPage.css  ReportPage.jsx  UploadPage.css  UploadPage.jsx
frontend/src/stores/: useAppStore.js
tests/: __init__.py  test_auth.py  test_prompt_security.py  test_security.py
